--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Start Variables */
 :root{
-    --main-color:#2196f3;
+    --main-color:#03A9F4;
     --main-color-alt:#1787e0;
     --section-color:#ececec;
 }
