--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 }
 
 body{
-    font-family: "Cairo", sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 html{
     scroll-behavior: smooth;
